--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,69 @@
   color: #61dafb;
 }
 
+
+
+.header {
+  color: #22D99F;
+  background-color: #052230;
+  border: 3px solid #6593E1;
+  border-radius: 30px;
+  font-size: 40px;
+  margin-top: 50px;
+  margin-left: 200px;
+  margin-right: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  text-align: center;
+  width: 1100px;
+}
+
+.news {
+  overflow:scroll;
+  display: inline-block;
+  font-size: 30px;
+  background-color: #6593E1;
+  border: 5px solid #382C49;
+  border-radius: 30px;
+  color: #D2C2E1;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 900px;
+  height: 500px;
+}
+.news2{
+  overflow:scroll;
+  font-size: 30px;
+  background-color: #6593E1;
+  border: 5px solid #382C49;
+  border-radius: 30px;
+  color: #D2C2E1;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+  height: 500px;
+}
+
+.news:hover {
+  background-color: #78527E;
+  color: lime;
+}
+
+.hood {
+  display: inline-block;
+}
+
+.lab {
+  margin-left: 50px;
+  margin-top: 50px;
+  width: 200px;
+  height: 250px;
+  background-image: url('http://russia-assault.ru/files/forums_imgs/1506001407.png');
+  background-position: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
